envoy/per-route-basic-auth/envoy.yaml
node:
  cluster: test-cluster
  id: test-id

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          accessLog:
          - name: envoy.access_loggers.file
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
              log_format:
                text_format_source:
                  inline_string: "[%START_TIME%] %REQ(x-teg-oidcauthentication)% %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL% %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% %REQ(X-FORWARDED-FOR)% %REQ(USER-AGENT)% %REQ(X-REQUEST-ID)% %REQ(:AUTHORITY)% %UPSTREAM_HOST%\n"
          http_filters:
          - name: envoy.filters.http.basic_auth-foo
            disabled: true
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.basic_auth.v3.BasicAuth
              users:
                inline_string: |-
                    foo:{SHA}Ys23Ag/5IOWqZCw9QGaVDdHwH00=
          - name: envoy.filters.http.basic_auth-bar
            disabled: true
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.basic_auth.v3.BasicAuth
              users:
                inline_string: |-
                    foo1:{SHA}djZ11qHY0KOijeymK7aKvYuvhvM=
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/foo"
                route:
                  cluster: local_service
                typed_per_filter_config:
                  envoy.filters.http.basic_auth-foo:
                    "@type":  type.googleapis.com/envoy.config.route.v3.FilterConfig
                    config: {}
              - match:
                  prefix: "/bar"
                route:
                  cluster: local_service
                typed_per_filter_config:
                  envoy.filters.http.basic_auth-bar:
                    "@type":  type.googleapis.com/envoy.config.route.v3.FilterConfig
                    config: {}
  clusters:
  - name: local_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend
                port_value: 8080
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10001
